[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-prices'
version = '1.9.8'

[dependencies]
codec         = { package = 'parity-scale-codec', version = '3.1.5', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
frame-system  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
sp-core       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
pallet-amm    = { path = '../amm', default-features = false }
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
orml-oracle   = { version = '0.4.1-dev', default-features = false }
orml-traits   = { version = '0.4.1-dev', default-features = false }
pallet-traits = { path = '../traits', default-features = false }
primitives    = { package = 'parallel-primitives', path = '../../primitives', default-features = false }
scale-info    = { version = '2.1', default-features = false, features = ['derive'] }
serde         = { version = '1.0.136', optional = true }
num-traits    = { default-features = false, version = '0.2' }
sp-runtime    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
sp-std        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }

[dev-dependencies]
sp-io                   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
pallet-balances         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }
pallet-currency-adapter = { path = '../currency-adapter' }

[features]
default     = ['std']
std         = [
  'serde',
  'codec/std',
  'sp-runtime/std',
  'frame-support/std',
  'frame-system/std',
  'sp-std/std',
  'sp-core/std',
  'orml-traits/std',
  'orml-oracle/std',
  'primitives/std',
  'scale-info/std',
  'num-traits/std',
  'pallet-traits/std',
  'pallet-amm/std',
  'pallet-assets/std',
]
try-runtime = ['frame-support/try-runtime']

runtime-benchmarks = ['pallet-assets/runtime-benchmarks']

[lib]
doctest = false
