[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-prices'
version = { workspace = true }

[dependencies]
codec         = { workspace = true }
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-core       = { workspace = true }
pallet-amm    = { workspace = true }
pallet-assets = { workspace = true }
orml-oracle   = { workspace = true }
orml-traits   = { workspace = true }
pallet-traits = { workspace = true }
primitives    = { workspace = true }
scale-info    = { workspace = true, features = ['derive'] }
serde         = { workspace = true, optional = true }
num-traits    = { workspace = true }
sp-runtime    = { workspace = true }
sp-std        = { workspace = true }

[dev-dependencies]
sp-io                   = { workspace = true, features = ['std'] }
pallet-balances         = { workspace = true, features = ['std'] }
pallet-currency-adapter = { workspace = true, features = ['std'] }

[features]
default     = ['std']
std         = [
  'serde',
  'codec/std',
  'sp-runtime/std',
  'frame-support/std',
  'frame-system/std',
  'sp-std/std',
  'sp-core/std',
  'orml-traits/std',
  'orml-oracle/std',
  'primitives/std',
  'scale-info/std',
  'num-traits/std',
  'pallet-traits/std',
  'pallet-amm/std',
  'pallet-assets/std',
]
try-runtime = ['frame-support/try-runtime']

runtime-benchmarks = ['pallet-assets/runtime-benchmarks']

[lib]
doctest = false
