[package]
name = 'pallet-rate'
version = '3.0.0'
authors = ['Parallel Team']
edition = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
primitives = { package = "parallel-primitives", path = "../../primitives", default-features = false }
substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed', tag = "v0.5.6" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
